# sa-fuel-homeassistant

./: .gitignore  .ruff.toml  CHANGELOG.md  README.md  hacs.json  pyproject.toml  release-notes.md  requirements.txt
.github/workflows/: lint.yml  release.yml  validate.yml
custom_components/sa_fuel_pricing/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  sensor.py  strings.json
tests/: conftest.py  test_api_client.py  test_config_flow.py  test_coordinator.py  test_data_models.py  test_diagnostics.py  test_options_flow.py  test_sensor.py
tests/fixtures/: api_brands.json  api_fuel_types.json  api_geo_regions.json  api_site_details.json  api_site_prices.json
