[project]
name = "sa-fuel-homeassistant"
version = "1.1.3"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["custom_components/sa_fuel_pricing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.uv]
override-dependencies = [
    # pymicro-vad and pyspeex-noise are transitive deps of homeassistant that
    # only have source distributions; they fail to build on Windows.
    # Override them to be Linux-only so Windows dev environments can sync.
    "pymicro-vad>=1.0.1; sys_platform == 'linux'",
    "pyspeex-noise>=1.0.2; sys_platform == 'linux'",
]
